@@ -1,17 +1,0 @@
-module WebTranslateIt
-
-  module Safe
-
-    class Svndump < Source
-
-      def command
-        "svnadmin dump #{config[:options]} #{config[:repo_path]}"
-      end
-
-      def extension = '.svn'
-
-    end
-
-  end
-
-end
