@@ -183,10 +183,4 @@ safe do
     # end
   end
 
-  # svndump do
-  #   repo :my_repo do
-  #     repo_path "/home/svn/my_repo"
-  #   end
-  # end
-
 end
